syntax = "proto3";

package protos;

// 登陆请求
message CLLogin {
	string deviceid = 1; // 设备id
	string ip = 2; // ip地址
	int64 client_sessionid = 3; // 客户端在网关上的SessionID
}

// 登陆回应
message LCLogin {
	int32 error = 1; // 0:成功,非0时失败
	string errmsg = 2; // 错误信息
	int64 userid = 3; // userid
	int64 client_sessionid = 4; // 客户端在网关上的SessionID
	string login_key = 5; // 登陆密钥
	string user_token = 6; // 登陆游戏token
}

// 服务器列表请求
message CLServerList {
}

// 服务器列表回应
message LCServerList {

	// 角色信息
	message PlayerInfo {
		int64 guid = 1; // PlayerGUID
		string name = 2; // PlayerName
		int32 portraitid = 3; // 头像ID
		int32 level = 4; // 等级
	}

	// 服务器状态
	enum ServerState {
		CLOSE = 0; // 关闭
		OPEN = 1; // 开启
	}

	// 服务器信息
	message ServerInfo {
		int32 id = 1; // 服务器id
		string name = 2; // 服务器名字
		ServerState state = 3; // 服务器状态
		string addr = 4; // 服务器地址 ip:port
		PlayerInfo player_info = 5; // 角色信息
	}

	int32 error = 1; // 0:成功,非0时失败
	string errmsg = 2; // 错误信息
	repeated ServerInfo server_list = 3; // 服务器列表
}
